# dotfiles

./: .Xresources  .fehbg  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .p10k.zsh  .profile  .stow-local-ignore  .xprofile  .zshrc  AGENTS.md  CONTRIBUTING.md  INSTALL.md  README.md  SETUP.md  arch-linux-setup.sh  fedora.sh  macos.sh  packages.txt  ubuntu.sh
.config/Code - OSS/User/: settings.json
.config/alacritty/: alacritty.yml
.config/awesome/: .editorconfig  rc.lua  theme.lua
.config/awesome/appearance/: icons.lua  init.lua
.config/awesome/bar/: init.lua
.config/awesome/layouts/: init.lua
.config/awesome/rules/: init.lua
.config/awesome/shortcuts/: init.lua
.config/awesome/signals/: init.lua
.config/btop/: btop.conf
.config/conky/: conky.conf
.config/dunst/: dunstrc
.config/eidolon/: config.json
.config/fish/: config.fish
.config/fontconfig/: fonts.conf
.config/gtk-3.0/: settings.ini
.config/i3/: config
.config/kitty/: kitty.conf
.config/lazygit/: config.yml  state.yml
.config/neofetch/: config.conf
.config/picom/: picom.conf
.config/polybar/: config  launch.sh
.config/qtile/: LICENSE  README.md  config.py  requirements.txt  shortcuts.py  workspaces.py
.config/qtile/lib/: bars.py  defaults.py  hooks.py  screens.py  shortcuts.py  widgets.py  workspaces.py
.config/qtile/utils/: audio.py  bluetooth.py  network.py  theme.py
.config/rofi/: config.rasi
.config/rofi/menus/: rofi_audio_input  rofi_audio_output
.config/rofi/themes/: minimal.rasi  onedark.rasi  spotlight-dark.rasi
.config/zsh/themes/: powerline.zsh-theme
.scripts/: bluetooth.sh  config.sh  install.sh  pacman.sh  vscode-extensions.sh  yay.sh
.xmonad/: Makefile  xmobar.hs  xmonad.hs
.xmonad/lib/: Theme.hs
awesome/.config/awesome/: .editorconfig  error_handling.lua  set_paths.lua  theme.lua
git/: .gitconfig
gtk/: .gtkrc-2.0
heroic/: README.md
hyprland/: setup.sh
opencode/.agents/: .skill-lock.json
qtile/.config/qtile/: .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
qtile/.config/qtile/core/: __init__.py  bar.py  groups.py  hooks.py  keys.py  layouts.py  mouse.py  screens.py
qtile/.config/qtile/core/widgets/: __init__.py  bluetooth.py  nvidia.py  volume.py  vpn.py  wireless.py
qtile/.config/qtile/lib/: bars.py  defaults.py  screens.py  shortcuts.py  workspaces.py
qtile/.config/qtile/lib/layouts/: vertical.py
qtile/.config/qtile/lib/menus/: games.py
qtile/.config/qtile/lib/widgets/: __init__.py  bluetooth.py  vpn.py  wireless.py
qtile/.config/qtile/menus/: __init__.py  audio.py  games.py  projects.py
qtile/.config/qtile/services/: __init__.py  audio.py  bluetooth.py  network.py  nvidia.py  system.py
qtile/.config/qtile/settings/: __init__.py  apps.py  hardware.py  theme.py
qtile/.config/qtile/utils/: bluetooth.py  network.py  nvidia.py  queries.py
tmux/: .tmux.conf
xorg/: .Xresources
(+136 files in other folders)
