[tool.poetry]
name = "qtile-config"
version = "1.0.0"
description = "A modular, well-documented Qtile window manager configuration"
authors = ["Luis Alcaras"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lalcaraz/dotfiles"
keywords = ["qtile", "window-manager", "linux", "dotfiles", "tiling"]

[tool.poetry.dependencies]
python = "^3.11"
qtile = ">=0.23"
qtile-extras = { git = "https://github.com/elParaguayo/qtile-extras" }
dbus-next = ">=0.2.3"
dbus-fast = ">=1.0.0"
dbus-python = ">=1.3.2"
iwlib = ">=1.7.0"
psutil = ">=5.9.0"
pulsectl = ">=22.1.3"
pulsectl-asyncio = ">=1.0.0"
python-rofi = ">=1.0.1"
vdf = ">=3.4"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.0"
black = ">=23.0.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Ruff - Fast Python linter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "settings", "menus"]

# =============================================================================
# Black - Code formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
)/
'''

# =============================================================================
# MyPy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    ".venv",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "libqtile.*",
    "qtile_extras.*",
    "pulsectl.*",
    "pulsectl_asyncio.*",
    "iwlib.*",
    "rofi.*",
    "vdf.*",
    "dbus.*",
    "dbus_next.*",
    "dbus_fast.*",
]
ignore_missing_imports = true
